Fixed overflow errors for the editor area

--- a/presentation-new/css/editor.css
+++ b/presentation-new/css/editor.css
@@ -13,5 +13,6 @@
     width: 900px;
     height: 75px;
 
+    overflow: auto;
     border: 1px solid black;
 }
